--- a/gazebo_plugins/package.xml
+++ b/gazebo_plugins/package.xml
@@ -17,6 +17,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>roslib</build_depend>
   <build_depend>gazebo</build_depend>
   <build_depend>gazebo_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
